Simplify URL and URI handling